Fix layout issues and set thumbnail not working

--- a/css/thePlatform-browser.css
+++ b/css/thePlatform-browser.css
@@ -207,3 +207,7 @@ display: inline;
 .media {
     overflow: auto;
 }
+
+.navbar-text {
+    color: #666666 !important;
+}
