--- a/css/thePlatform-edit-upload.css
+++ b/css/thePlatform-edit-upload.css
@@ -21,7 +21,3 @@
     cursor: inherit;
     display: block;
 }
-
-body {
-    padding-left: 15px;
-}
